add support to freess.org

--- a/GetShadowSocksPWD/packages.config
+++ b/GetShadowSocksPWD/packages.config
@@ -3,4 +3,5 @@
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net451" />
   <package id="ScrapySharp" version="2.2.63" targetFramework="net451" />
+  <package id="ZXing.Net" version="0.15.0" targetFramework="net451" />
 </packages>
